package com.lemonpay.exchange.application;

public enum ExchangeRateSyncStatus {
    SYNCED,
    SKIPPED
}
